Refactor: Organize views and serializers into separate directories
- Moved authentication-related views (login, signup, logout, refresh) to `auth_views.py`.
- Created `profile_views.py` for user profile and friendship-related views.
- Organized serializers into individual files for better separation of concerns:
  - `user_serializers.py` for user-related serialization.
  - `friendship_serializers.py` for friendship serialization.
  - `chat_group_serializers.py` for chat group serialization.
  - `group_membership_serializers.py` for group membership serialization.
  - `signup_serializers.py` for user signup serialization.
- Added `__init__.py` files in both `views` and `serializers` directories to enable imports.

Refactor: Replace print statements with logger for better logging management

- Configured logging settings to use a custom logger instead of print statements.
- Added logging configuration for different log levels (`DEBUG`, `INFO`, `ERROR`) and custom formatters.
- Updated the project to log messages using the logger, improving debug and error tracking.
- Set up `chat_messages` logger with `INFO` level for general application logs.

Add: Custom WebSocket middleware for JWT authentication

- Implemented `JWTAuthMiddleware` to handle JWT token authentication for WebSocket connections.
- Middleware extracts the JWT token from the WebSocket headers and authenticates the user using `rest_framework_simplejwt`.
- If the token is valid, the user is added to the `scope`; otherwise, an `AnonymousUser` is set.
- Used `database_sync_to_async` for asynchronous token authentication.
- I performed a WebSocket test, and it worked perfectly.

--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,9 @@ pillow = "*"
 djangorestframework = "*"
 rest-framework-simplejwt = "*"
 djangorestframework-simplejwt = {extras = ["crypto"], version = "*"}
+channels = "*"
+daphne = "*"
+logger = "*"
 
 [dev-packages]
 
